maud/tests/warnings/non-closed-element.stderr
error: expected `;`, found end of macro
 --> tests/warnings/non-closed-element.rs:4:5
  |
4 | /     html! {
5 | |         p
6 | |     };
  | |______^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
